syntax = "proto3";

package deploy.v1;

option go_package = "github.com/powertoolsdev/mono/pkg/types/components/deploy/v1";

// HelmChartConfig enables a customer to install a helm chart from a repository.
message HelmChartConfig {
  // TODO(jm): add support for configuring helm charts with user values once we start on
  // https://github.com/powertoolsdev/mono/milestone/7
}
